// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state.headTags.get() (author) works with auhors 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/author/author-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/author/author-1/page/2/",
      "rel": "next",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://mars.sileajs.com/#website\\",\\"url\\":\\"https://mars.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (no entity) returns an empty array if there is no entity for current link 1`] = `Array []`;

exports[`state.headTags.get() (post entity) doesn't change links that don't point to WordPress pages 1`] = `
Array [
  Object {
    "attributes": Object {
      "content": "https://test.sileajs.com/wp-content/uploads/2019/12/img.jpg",
      "property": "og:image",
    },
    "tag": "meta",
  },
  Object {
    "attributes": Object {
      "content": "https://test.sileajs.com/wp-content/uploads/2019/12/img.jpg",
      "name": "twitter:image",
    },
    "tag": "meta",
  },
  Object {
    "attributes": Object {
      "href": "//s.w.org",
      "rel": "dns-prefetch",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/feed/",
      "rel": "alternate",
      "title": "silea » Feed",
      "type": "application/rss+xml",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/comments/feed/",
      "rel": "alternate",
      "title": "silea » Comments Feed",
      "type": "application/rss+xml",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/post-1/feed/",
      "rel": "alternate",
      "title": "silea » Post 1 Comments Feed",
      "type": "application/rss+xml",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/xmlrpc.php?rsd",
      "rel": "EditURI",
      "title": "RSD",
      "type": "application/rsd+xml",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-includes/wlwmanifest.xml",
      "rel": "wlwmanifest",
      "type": "application/wlwmanifest+xml",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/oembed/1.0/embed?url=http%3A%2F%2Ftest.sileajs.com%2Fpost-1%2F",
      "rel": "alternate",
      "type": "application/json+oembed",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/oembed/1.0/embed?url=http%3A%2F%2Ftest.sileajs.com%2Fpost-1%2F&format=xml",
      "rel": "alternate",
      "type": "text/xml+oembed",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/xmlrpc.php",
      "rel": "pingback",
    },
    "tag": "link",
  },
]
`;

exports[`state.headTags.get() (post entity) doesn't transform links if \`source.api\` and \`silea.url\` are the same site 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/post-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://test.sileajs.com/#website\\",\\"url\\":\\"https://test.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (post entity) doesn't transform links if \`state.headTags.transformLinks\` = false 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/post-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://test.sileajs.com/#website\\",\\"url\\":\\"https://test.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (post entity) returns elements without attributes (title) 1`] = `
Array [
  Object {
    "content": "Post 1 - Silea",
    "tag": "title",
  },
]
`;

exports[`state.headTags.get() (post entity) returns elements without content (meta tags) 1`] = `
Array [
  Object {
    "attributes": Object {
      "content": "max-snippet:-1, max-image-preview:large, max-video-preview:-1",
      "name": "robots",
    },
    "tag": "meta",
  },
]
`;

exports[`state.headTags.get() (post entity) shows a warning message if \`state.silea.url\` is not defined 1`] = `
Array [
  Array [
    "Property \`state.headTags.links.transform\` is defined but \`state.silea.url\` is not. All links in <head> tags pointing to other site (e.g. WordPress) instead to the Silea site won't be changed.

If you have any questions, join our community at https://community.sileajs.com/.
",
  ],
]
`;

exports[`state.headTags.get() (post entity) shows a warning message if a <script type="ld+json"> could not be parsed 1`] = `
Array [
  Array [
    "The following content of a <script type=\\"ld+json\\"> tag is not a valid JSON. Links in that tag will not be changed.

{
  \\"@context\\": \\"https://schema.org\\",
  \\"@graph\\": [
    {
      \\"@type\\": \\"WebPage\\",
      \\"@id\\": \\"https://test.sileajs.com/wrong-title/#webpage\\",
      \\"url\\": \\"https://test.sileajs.com/wrong-title/\\",
      \\"inLanguage\\": \\"en-US\\",
      \\"name\\": \\"Wrong title with \\"quotes\\" - silea\\",
      \\"isPartOf\\": {
        \\"@id\\": \\"https://test.sileajs.com/#website\\"
      }
    }
  ]
}

If you have any questions, join our community at https://community.sileajs.com/.
",
  ],
]
`;

exports[`state.headTags.get() (post entity) transform links inside ld+json data 1`] = `
Array [
  Object {
    "attributes": Object {
      "class": "yoast-schema-graph yoast-schema-graph--main",
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://mars.sileajs.com/#website\\",\\"url\\":\\"https://mars.sileajs.com/\\",\\"potentialAction\\":{\\"@type\\":\\"SearchAction\\",\\"target\\":\\"https://mars.sileajs.com/?s={search_term_string}\\"}},{\\"@type\\":\\"ImageObject\\",\\"@id\\":\\"https://mars.sileajs.com/post-1/#primaryimage\\",\\"url\\":\\"https://test.sileajs.com/wp-content/uploads/2019/12/img.jpg\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (post entity) transform links using a custom \`base\` value 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/post-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://mars.sileajs.com/#website\\",\\"url\\":\\"https://mars.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (post entity) transform links using a custom \`ignore\` value 1`] = `
Array [
  Object {
    "attributes": Object {
      "content": "https://mars.sileajs.com/wp-content/uploads/2019/12/img.jpg",
      "name": "twitter:image",
    },
    "tag": "meta",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/do-not-change/me/",
      "rel": "alternate",
      "title": "silea » Feed",
      "type": "application/rss+xml",
    },
    "tag": "link",
  },
]
`;

exports[`state.headTags.get() (post entity) transforms links appropiately when Silea is in a subdirectory 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://sileajs.com/mars/post-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/subdir/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://sileajs.com/mars/#website\\",\\"url\\":\\"https://sileajs.com/mars/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (post entity) transforms links appropiately when WP is in a subdirectory 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/post-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/subdir/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://mars.sileajs.com/#website\\",\\"url\\":\\"https://mars.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (post entity) transforms links that point to WordPress pages 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/post-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "content": "https://mars.sileajs.com/post-1/",
      "property": "og:url",
    },
    "tag": "meta",
  },
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/?p=1",
      "rel": "shortlink",
    },
    "tag": "link",
  },
]
`;

exports[`state.headTags.get() (post type) works with post types 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/page/2/",
      "rel": "next",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://mars.sileajs.com/#website\\",\\"url\\":\\"https://mars.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;

exports[`state.headTags.get() (taxonomy) works with taxonomies 1`] = `
Array [
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/category/cat-1/",
      "rel": "canonical",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://mars.sileajs.com/category/cat-1/page/2/",
      "rel": "next",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "href": "https://test.sileajs.com/wp-json/",
      "rel": "https://api.w.org/",
    },
    "tag": "link",
  },
  Object {
    "attributes": Object {
      "type": "application/ld+json",
    },
    "content": "{\\"@context\\":\\"https://schema.org\\",\\"@graph\\":[{\\"@type\\":\\"WebSite\\",\\"@id\\":\\"https://mars.sileajs.com/#website\\",\\"url\\":\\"https://mars.sileajs.com/\\"}]}",
    "tag": "script",
  },
]
`;
